<resources>
    <string name="app_name">module-main</string>
    <string name="main_account_info">账户信息</string>
    <string name="main_current_version">当前版本</string>
    <string name="main_device_info">设备信息</string>
    <string name="main_logout">退出登录</string>
    <string name="main_setting">MAIN SETTING</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_logout_title">退出登录</string>
    <string name="main_logout_msg">确定要退出登录吗？</string>
    <string name="main_confirm">确定</string>
    <string name="main_cancel">取消</string>
</resources>